--- a/Avalonia.Tiels/Avalonia.Tiels.csproj
+++ b/Avalonia.Tiels/Avalonia.Tiels.csproj
@@ -6,6 +6,7 @@
         <!--Avalonia doesen't support TrimMode=link currently,but we are working on that https://github.com/AvaloniaUI/Avalonia/issues/6892 -->
         <TrimMode>copyused</TrimMode>
         <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
+        <ApplicationIcon>Assets\tiels_color.ico</ApplicationIcon>
     </PropertyGroup>
     <ItemGroup>
         <None Remove=".gitignore" />
@@ -30,6 +31,10 @@
       <Resource Include="Assets\global.default.toml">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Resource>
+      <None Remove="Assets\tiles_colored.ico" />
+      <AvaloniaResource Include="Assets\tiels_color.ico">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </AvaloniaResource>
     </ItemGroup>
     <ItemGroup>
       <EmbeddedResource Update="Resources\Resources.pl.resx">
