--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,9 @@ node_modules
 src/Browser/Avalonia.Browser.Blazor/webapp/package-lock.json
 src/Browser/Avalonia.Browser.Blazor/wwwroot
 src/Browser/Avalonia.Browser/wwwroot
+
+##################
+# Custom Building
+##################
+out/
+Tiels/target/
