Add wip new build script. Add new icon.

--- a/Avalonia.Tiels/Avalonia.Tiels.csproj
+++ b/Avalonia.Tiels/Avalonia.Tiels.csproj
@@ -76,6 +76,7 @@
       </Compile>
     </ItemGroup>
     <ItemGroup>
+      <Folder Include="Assets\Icons\out" />
       <Folder Include="Pages\Management" />
     </ItemGroup>
 </Project>
