--- a/Avalonia.Tiels/Avalonia.Tiels.csproj
+++ b/Avalonia.Tiels/Avalonia.Tiels.csproj
@@ -28,18 +28,18 @@
         <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
     </ItemGroup>
     <ItemGroup>
-      <None Remove="Resources\global.default.toml" />
-      <AdditionalFiles Include="Assets\global.default.toml">
+      <AdditionalFiles Include="Defaults\global.default.toml">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </AdditionalFiles>
+      <AdditionalFiles Include="Defaults\tile.default.toml">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </AdditionalFiles>
+      <None Remove="Resources\global.default.toml" />
       <None Remove="Assets\tiles_colored.ico" />
       <AvaloniaResource Include="Assets\tiels_color.ico">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </AvaloniaResource>
       <None Remove="Assets\tile.default.toml" />
-      <AdditionalFiles Include="Assets\tile.default.toml">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </AdditionalFiles>
     </ItemGroup>
     <ItemGroup>
       <EmbeddedResource Update="Resources\Resources.pl.resx">
