Use the new SVG icons in the settings

--- a/include.toml
+++ b/include.toml
@@ -5,5 +5,8 @@ icons = [
     "settings",
     "folder-cog",
     "folder-symlink",
-    "download-cloud"
+    "download-cloud",
+    "alert-octagon",
+    "wrench",
+    "info"
 ]
