--- a/Avalonia.Tiels/Avalonia.Tiels.csproj
+++ b/Avalonia.Tiels/Avalonia.Tiels.csproj
@@ -23,9 +23,10 @@
         <PackageReference Include="Avalonia.Desktop" Version="0.10.18" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.18" />
+        <PackageReference Include="Avalonia.Svg" Version="0.10.18" />
         <PackageReference Include="AvaloniaColorPicker" Version="1.3.4" />
-        <PackageReference Include="Tomlyn" Version="0.16.1" />
-        <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
+        <PackageReference Include="Tomlyn" Version="0.16.2" />
+        <PackageReference Include="XamlNameReferenceGenerator" Version="1.5.1" />
     </ItemGroup>
     <ItemGroup>
       <AdditionalFiles Include="Defaults\global.default.toml">
@@ -35,11 +36,7 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </AdditionalFiles>
       <None Remove="Resources\global.default.toml" />
-      <None Remove="Assets\tiles_colored.ico" />
-      <AvaloniaResource Include="Assets\tiels_color.ico">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </AvaloniaResource>
-      <None Remove="Assets\tile.default.toml" />
+      <AvaloniaResource Include="Assets\**"/>
     </ItemGroup>
     <ItemGroup>
       <EmbeddedResource Update="Resources\Resources.pl.resx">
