--- a/.gitignore
+++ b/.gitignore
@@ -222,6 +222,6 @@ src/Browser/Avalonia.Browser/wwwroot
 ##################
 out/
 Tiels/target/
-Avalonia.Tiels/Assets/Icons/out
 pyenv/
 build/icons/
+build/iconfont_metadata.json
