Safe theme requesting. Add override property in configs. Tile checks if appearance overriden.

--- a/Avalonia.Tiels/Defaults/global.default.toml
+++ b/Avalonia.Tiels/Defaults/global.default.toml
@@ -6,6 +6,7 @@ special_effects = true
 experimental = false
 
 [appearance]
+override = false # Override global values
 theme = "dark" # 'light' and 'dark' options supported
 color = "#55000000" # ARGB Color
 
