--- a/Avalonia.Tiels/Avalonia.Tiels.csproj
+++ b/Avalonia.Tiels/Avalonia.Tiels.csproj
@@ -71,6 +71,10 @@
         <DependentUpon>AppearanceSettingsPage.axaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
+      <Compile Update="Pages\Settings\ThumbnailsPage.axaml.cs">
+        <DependentUpon>ThumbnailsPage.axaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Pages\Management" />
