Add resize snapping. Add Tile resize impl.

--- a/Avalonia.Tiels/Defaults/global.default.toml
+++ b/Avalonia.Tiels/Defaults/global.default.toml
@@ -4,6 +4,8 @@ auto_start = true
 hide_settings = true # Hide settings when application autostarts
 special_effects = true
 experimental = false
+hide_tile_buttons = true
+snapping = 5
 
 [appearance]
 override = false # Override global values
