--- a/Avalonia.Tiels/Defaults/global.default.toml
+++ b/Avalonia.Tiels/Defaults/global.default.toml
@@ -6,6 +6,7 @@ special_effects = true
 experimental = false
 hide_tile_buttons = true
 snapping = 5
+handle_height = 38.0
 
 [appearance]
 override = false # Override global values
