--- a/.gitignore
+++ b/.gitignore
@@ -225,4 +225,4 @@ Tiels/target/
 pyenv/
 assets/icons-remote/
 assets/iconfont_metadata.json
-Avalonia.Tiels/Assets/lucidelite.ttf.old
+Avalonia.Tiels/Assets/lucidelite.ttf
