Update namespaces, Add ExternalLink Icon. Clean imports. Add ThumbnailsSettingsEnabled.

--- a/assets/include.toml
+++ b/assets/include.toml
@@ -20,9 +20,14 @@ icons = [
     "sticky-note",
     "file-image",
     "flask-conical",
-    "layout-grid"
+    "layout-grid",
+    "external-link",
 ]
 
 local_icons = [
     "window-plus"
+]
+
+copy = [
+    "external-link"
 ]
