--- a/Avalonia.Tiels/Avalonia.Tiels.csproj
+++ b/Avalonia.Tiels/Avalonia.Tiels.csproj
@@ -77,6 +77,7 @@
       </Compile>
     </ItemGroup>
     <ItemGroup>
+      <Folder Include="Assets\Icons" />
       <Folder Include="Pages\Management" />
     </ItemGroup>
 </Project>
