Add tile management category and add blur component

--- a/assets/include.toml
+++ b/assets/include.toml
@@ -22,6 +22,9 @@ icons = [
     "flask-conical",
     "layout-grid",
     "external-link",
+    "more-vertical",
+    "trash",
+    "trash-2",
 ]
 
 local_icons = [
