--- a/Avalonia.Tiels/Avalonia.Tiels.csproj
+++ b/Avalonia.Tiels/Avalonia.Tiels.csproj
@@ -76,10 +76,13 @@
         <DependentUpon>ThumbnailsPage.axaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
+      <Compile Update="Pages\Management\TileManagementPage.axaml.cs">
+        <DependentUpon>SnappingPage.axaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Assets\Icons" />
-      <Folder Include="Pages\Management" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.6.0-1.final">
