Save language to config

--- a/Avalonia.Tiels/Defaults/global.default.toml
+++ b/Avalonia.Tiels/Defaults/global.default.toml
@@ -1,5 +1,6 @@
 [settings]
 tiles_path = "not_initialized"
+language = "en"
 auto_start = true
 auto_start_hide_settings = true # Hide settings when application autostarts
 thumbnails_settings_enabled = true
