Add tooltips to ManageListEntry, get default tile color from Util class. Add "move" icon

--- a/assets/include.toml
+++ b/assets/include.toml
@@ -24,7 +24,8 @@ icons = [
     "external-link",
     "more-vertical",
     "trash",
-    "trash-2"
+    "trash-2",
+    "move"
 ]
 
 local_icons = [
