Clean some warnings

--- a/Avalonia.Tiels/Defaults/global.default.toml
+++ b/Avalonia.Tiels/Defaults/global.default.toml
@@ -3,8 +3,8 @@ tiles_path = "not_initialized"
 language = "en"
 auto_start = true
 auto_start_hide_settings = true # Hide settings when application autostarts
-thumbnails_settings_enabled = true
-updates_settings_enabled = true
+thumbnails_settings_enabled = false
+updates_settings_enabled = false
 experimental = false
 snapping = 5
 handle_height = 28.0 # Height of the handle in pixels
